Update HandFactoryImpl to allow DealerHand with more than 1 hand to be recreated